--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
 	<nav class="navbar navbar-expand-sm navbar-dark bg-dark ">
 		<h5><span class="text-white font-weight-bold pr-xl-3" style="text-shadow: 0 0 8px #000;">
+				<svg style="width:36px;height:36px" viewBox="0 0 24 24">
+					<path fill="currentColor" d="M14,6L10.25,11L13.1,14.8L11.5,16C9.81,13.75 7,10 7,10L1,18H23L14,6Z" />
+				</svg>
 				Gestionale
 			</span></h5>
 		<span class="text-light ml-md-1" style="font-size:0.8em;">
@@ -116,12 +119,24 @@
 				<!-- ARTICOLI -->
 				<div class="col-6 col-sm-2 col-lg-1">
 					<div class="row m-0">
-						<div class="col-3">
-							<img class="miniatura" src="immagini/articoli/rivista.jpg">
+						<div class="col-3 libro-0">
+							<svg style="width:24px;height:24px" viewBox="0 0 24 24">
+								<title>Rivista</title>
+								<path fill="currentColor"
+									d="M19 1L14 6V17L19 12.5V1M21 5V18.5C19.9 18.15 18.7 18 17.5 18C15.8 18 13.35 18.65 12 19.5V6C10.55 4.9 8.45 4.5 6.5 4.5C4.55 4.5 2.45 4.9 1 6V20.65C1 20.9 1.25 21.15 1.5 21.15C1.6 21.15 1.65 21.1 1.75 21.1C3.1 20.45 5.05 20 6.5 20C8.45 20 10.55 20.4 12 21.5C13.35 20.65 15.8 20 17.5 20C19.15 20 20.85 20.3 22.25 21.05C22.35 21.1 22.4 21.1 22.5 21.1C22.75 21.1 23 20.85 23 20.6V6C22.4 5.55 21.75 5.25 21 5M10 18.41C8.75 18.09 7.5 18 6.5 18C5.44 18 4.18 18.19 3 18.5V7.13C3.91 6.73 5.14 6.5 6.5 6.5C7.86 6.5 9.09 6.73 10 7.13V18.41Z" />
+							</svg>
 						</div>
-						<div class="col-3">
+						<div class="col-3 libro-1">
+							<svg style="width:24px;height:24px" viewBox="0 0 24 24">
+								<path fill="currentColor"
+									d="M9.05,9H7.06V6H9.05V4.03H7.06V3.03C7.06,1.92 7.95,1.04 9.05,1.04H15.03V8L17.5,6.5L20,8V1.04H21C22.05,1.04 23,2 23,3.03V17C23,18.03 22.05,19 21,19H9.05C8,19 7.06,18.05 7.06,17V16H9.05V14H7.06V11H9.05V9M1,18H3V15H1V13H3V10H1V8H3V5H5V8H3V10H5V13H3V15H5V18H3V20H5V21H21V23H5A2,2 0 0,1 3,21V20H1V18Z" />
+							</svg>
 						</div>
-						<div class="col-3">
+						<div class="col-3 libro-2">
+							<svg style="width:24px;height:24px" viewBox="0 0 24 24">
+								<path fill="currentColor"
+									d="M15,19L9,16.89V5L15,7.11M20.5,3C20.44,3 20.39,3 20.34,3L15,5.1L9,3L3.36,4.9C3.15,4.97 3,5.15 3,5.38V20.5A0.5,0.5 0 0,0 3.5,21C3.55,21 3.61,21 3.66,20.97L9,18.9L15,21L20.64,19.1C20.85,19 21,18.85 21,18.62V3.5A0.5,0.5 0 0,0 20.5,3Z" />
+							</svg>
 						</div>
 						<div class="col-3">
 						</div>
@@ -163,8 +178,8 @@
 				<!-- DATI RIVENDITORE -->
 				<div class="col-12 col-sm-7 col-lg-4">
 					<div class="row m-0">
-						<div class="col-4 tronca">
-							Castionetto di Chiuro </div>
+						<div class="col-4 tronca"><small>
+								Castionetto di Chiuro</small> </div>
 						<div class="col-5 tronca">
 							<small>via Madonnina, 50</small>
 						</div>
@@ -255,7 +270,7 @@
 
 
 
-			<div class="row m-0 riga bg-danger flash">
+			<div class="row m-0 riga flash">
 				<!-- ARTICOLI -->
 				<div class="col-6 col-sm-2 col-lg-1">
 					<div class="row m-0">
@@ -335,13 +350,24 @@
 				<!-- ARTICOLI -->
 				<div class="col-6 col-sm-2 col-lg-1">
 					<div class="row m-0">
-						<div class="col-3">
-							<img class="miniatura" src="immagini/articoli/rivista.jpg">
+						<div class="col-3 libro-0">
+							<svg style="width:24px;height:24px" viewBox="0 0 24 24">
+								<title>Rivista</title>
+								<path fill="currentColor"
+									d="M19 1L14 6V17L19 12.5V1M21 5V18.5C19.9 18.15 18.7 18 17.5 18C15.8 18 13.35 18.65 12 19.5V6C10.55 4.9 8.45 4.5 6.5 4.5C4.55 4.5 2.45 4.9 1 6V20.65C1 20.9 1.25 21.15 1.5 21.15C1.6 21.15 1.65 21.1 1.75 21.1C3.1 20.45 5.05 20 6.5 20C8.45 20 10.55 20.4 12 21.5C13.35 20.65 15.8 20 17.5 20C19.15 20 20.85 20.3 22.25 21.05C22.35 21.1 22.4 21.1 22.5 21.1C22.75 21.1 23 20.85 23 20.6V6C22.4 5.55 21.75 5.25 21 5M10 18.41C8.75 18.09 7.5 18 6.5 18C5.44 18 4.18 18.19 3 18.5V7.13C3.91 6.73 5.14 6.5 6.5 6.5C7.86 6.5 9.09 6.73 10 7.13V18.41Z" />
+							</svg>
 						</div>
-						<div class="col-3">
-							<img class="miniatura" src="immagini/articoli/libro.jpg">
+						<div class="col-3 libro-1">
+							<svg style="width:24px;height:24px" viewBox="0 0 24 24">
+								<path fill="currentColor"
+									d="M9.05,9H7.06V6H9.05V4.03H7.06V3.03C7.06,1.92 7.95,1.04 9.05,1.04H15.03V8L17.5,6.5L20,8V1.04H21C22.05,1.04 23,2 23,3.03V17C23,18.03 22.05,19 21,19H9.05C8,19 7.06,18.05 7.06,17V16H9.05V14H7.06V11H9.05V9M1,18H3V15H1V13H3V10H1V8H3V5H5V8H3V10H5V13H3V15H5V18H3V20H5V21H21V23H5A2,2 0 0,1 3,21V20H1V18Z" />
+							</svg>
 						</div>
-						<div class="col-3">
+						<div class="col-3 libro-2">
+							<svg style="width:24px;height:24px" viewBox="0 0 24 24">
+								<path fill="currentColor"
+									d="M15,19L9,16.89V5L15,7.11M20.5,3C20.44,3 20.39,3 20.34,3L15,5.1L9,3L3.36,4.9C3.15,4.97 3,5.15 3,5.38V20.5A0.5,0.5 0 0,0 3.5,21C3.55,21 3.61,21 3.66,20.97L9,18.9L15,21L20.64,19.1C20.85,19 21,18.85 21,18.62V3.5A0.5,0.5 0 0,0 20.5,3Z" />
+							</svg>
 						</div>
 						<div class="col-3">
 						</div>
@@ -410,12 +436,24 @@
 				<!-- ARTICOLI -->
 				<div class="col-6 col-sm-2 col-lg-1">
 					<div class="row m-0">
-						<div class="col-3">
-							<img class="miniatura" src="immagini/articoli/rivista.jpg">
+						<div class="col-3 libro-0">
+							<svg style="width:20px;height:20px" viewBox="0 0 24 24">
+								<title>Rivista</title>
+								<path fill="currentColor"
+									d="M19 1L14 6V17L19 12.5V1M21 5V18.5C19.9 18.15 18.7 18 17.5 18C15.8 18 13.35 18.65 12 19.5V6C10.55 4.9 8.45 4.5 6.5 4.5C4.55 4.5 2.45 4.9 1 6V20.65C1 20.9 1.25 21.15 1.5 21.15C1.6 21.15 1.65 21.1 1.75 21.1C3.1 20.45 5.05 20 6.5 20C8.45 20 10.55 20.4 12 21.5C13.35 20.65 15.8 20 17.5 20C19.15 20 20.85 20.3 22.25 21.05C22.35 21.1 22.4 21.1 22.5 21.1C22.75 21.1 23 20.85 23 20.6V6C22.4 5.55 21.75 5.25 21 5M10 18.41C8.75 18.09 7.5 18 6.5 18C5.44 18 4.18 18.19 3 18.5V7.13C3.91 6.73 5.14 6.5 6.5 6.5C7.86 6.5 9.09 6.73 10 7.13V18.41Z" />
+							</svg>
 						</div>
-						<div class="col-3">
+						<div class="col-3 libro-1">
+							<svg style="width:24px;height:24px" viewBox="0 0 24 24">
+								<path fill="currentColor"
+									d="M9.05,9H7.06V6H9.05V4.03H7.06V3.03C7.06,1.92 7.95,1.04 9.05,1.04H15.03V8L17.5,6.5L20,8V1.04H21C22.05,1.04 23,2 23,3.03V17C23,18.03 22.05,19 21,19H9.05C8,19 7.06,18.05 7.06,17V16H9.05V14H7.06V11H9.05V9M1,18H3V15H1V13H3V10H1V8H3V5H5V8H3V10H5V13H3V15H5V18H3V20H5V21H21V23H5A2,2 0 0,1 3,21V20H1V18Z" />
+							</svg>
 						</div>
-						<div class="col-3">
+						<div class="col-3 libro-2">
+							<svg style="width:24px;height:24px" viewBox="0 0 24 24">
+								<path fill="currentColor"
+									d="M15,19L9,16.89V5L15,7.11M20.5,3C20.44,3 20.39,3 20.34,3L15,5.1L9,3L3.36,4.9C3.15,4.97 3,5.15 3,5.38V20.5A0.5,0.5 0 0,0 3.5,21C3.55,21 3.61,21 3.66,20.97L9,18.9L15,21L20.64,19.1C20.85,19 21,18.85 21,18.62V3.5A0.5,0.5 0 0,0 20.5,3Z" />
+							</svg>
 						</div>
 						<div class="col-3">
 						</div>
@@ -550,7 +588,7 @@
 			</div>
 
 
-			<div class="row m-0 riga bg-warning flash">
+			<div class="row m-0 riga  bg-danger flash">
 				<!-- ARTICOLI -->
 				<div class="col-6 col-sm-2 col-lg-1">
 					<div class="row m-0">
@@ -695,16 +733,16 @@
 
 	<div class="row">
 		<div class="col-2">
-			<p class="text-primary">.text-primary</p>
-			<p class="text-secondary">.text-secondary</p>
-			<p class="text-success">.text-success</p>
-			<p class="text-danger">.text-danger</p>
-			<p class="text-warning">.text-warning</p>
-			<p class="text-info">.text-info</p>
-			<p class="text-light">.text-light</p>
-			<p class="text-dark">.text-dark</p>
-			<p class="text-muted">.text-muted</p>
-			<p class="text-white">.text-white</p>
+			<p class="text-primary">.text-primary</p> body
+			<p class="text-secondary">.text-secondary</p> body
+			<p class="text-success">.text-success</p> body
+			<p class="text-danger">.text-danger</p> body
+			<p class="text-warning">.text-warning</p> body
+			<p class="text-info">.text-info</p> body
+			<p class="text-light">.text-light</p> body
+			<p class="text-dark">.text-dark</p> body
+			<p class="text-muted">.text-muted</p> body
+			<p class="text-white">.text-white</p> body
 		</div>
 
 
